--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server",
+    "start:server": "nodemon server",
+    "start:front":"cd client && npm start ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
