--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
