--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "send": "^0.17.2"
   },
   "devDependencies": {
