--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "downloadjs": "^1.4.7",
     "express": "^4.17.3",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
